Fix links and basic styling

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 	    	<button type="submit">Search</button>
     	</form>
     </section>
-    <section id="js-search-results">
-
-    </section>
+    <ul id="js-search-results">
+    </ul>
 	<footer>
 	    <p>&#xa9; 2017 Meryem Yanar. <a href="https://github.com/Marjona6">GitHub</a> </p>
 	</footer>
