--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Thinkful Tube: YouTube API Search</title>
 	<meta name="description" content="YouTube API Search">
     <meta name="author" content="Meryem Yanar">
+    <link rel="stylesheet" href="responsive-grid.css" type="text/css">
     <link rel="stylesheet" href="main.css" type="text/css">
     <!-- add support for browsers with special needs-->
     <!--[if lt IE 9]>
@@ -32,6 +33,6 @@
 	  src="https://code.jquery.com/jquery-3.2.1.js"
 	  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
 	  crossorigin="anonymous"></script>
-	<script src="app-2.js" type="text/javascript"></script>
+	<script src="app.js" type="text/javascript"></script>
 </body>
 </html>
