Make responsive grid, add styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Meryem Yanar">
     <link rel="stylesheet" href="responsive-grid.css" type="text/css">
     <link rel="stylesheet" href="main.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Barrio|El+Messiri" rel="stylesheet">
     <!-- add support for browsers with special needs-->
     <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
